objects/Article_Feedback__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <description>Parent Account</description>
        <formula>Submitter__r.Parent_Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Article__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Article</label>
        <referenceTo>Article__c</referenceTo>
        <relationshipName>Article_Feedback</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Associated_CCR__c</fullName>
        <label>Associated CCR</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Associated_Case__c</fullName>
        <label>Associated Case</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Associated_JIRA__c</fullName>
        <label>Associated JIRA</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>COS_Session_ID__c</fullName>
        <label>COS Session ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <picklist>
            <controllingField>Feedback_Type__c</controllingField>
            <picklistValues>
                <fullName>Content</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Infrastructure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invalid</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Closed_Date__c</fullName>
        <label>Closed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CommentCreatedDate_Min__c</fullName>
        <label>CommentCreatedDate_Min</label>
        <summarizedField>Article_Feedback_Comment__c.CreatedDate</summarizedField>
        <summaryForeignKey>Article_Feedback_Comment__c.Article_Feedback__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Dislike__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dislike</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Document_type__c</fullName>
        <label>Document type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Feed_Back_Response_List__c</fullName>
        <label>Feed Back Response List</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Feed_Back_Response__c</fullName>
        <label>Feed Back Response</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Feedback_Categories__c</fullName>
        <label>Feedback Categories</label>
        <picklist>
            <picklistValues>
                <fullName>Search</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Content</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Look and Feel</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Feedback_ID__c</fullName>
        <label>Feedback ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Feedback_Submission_Date__c</fullName>
        <label>Feedback Submission Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Feedback_Type__c</fullName>
        <description>Feedback Type</description>
        <label>Feedback Type</label>
        <picklist>
            <picklistValues>
                <fullName>Positive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Negative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neutral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enhancement</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Fire_validation_on_close__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fire validation on close</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Feedback_Answered_within_a_day__c</fullName>
        <formula>IF( CommentCreatedDate_Min__c -  CreatedDate &lt;=1.00, true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is_Feedback_Answered_within_a_day</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Like__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Like</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Note__c</fullName>
        <label>Note</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <picklist>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Page_URL__c</fullName>
        <label>Page URL</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Prevented_Case__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exactly what I am looking for</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ProductFamilytechpub__c</fullName>
        <label>Product Family</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductFeature__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Feature</label>
        <referenceTo>Product_Feature__c</referenceTo>
        <relationshipName>Article_Feedback</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProductVersion_techpub__c</fullName>
        <label>Product Version - Tech Pub</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Class__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product_Class__c</referenceTo>
        <relationshipName>Article_Feedback</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Feature_Version__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Version</label>
        <referenceTo>Product_Feature_Version__c</referenceTo>
        <relationshipName>Article_Feedback</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Feature__c</fullName>
        <formula>Article__r.Product_Feature__r.Name</formula>
        <label>Product Feature</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <formula>IF(Product_techPub__c==null, Product_Class__r.Name, Product_techPub__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Version__c</fullName>
        <formula>Article__r.Product_Feature_Version__r.Name</formula>
        <label>Product Version</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <formula>Article__r.Product__r.Name</formula>
        <label>Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_techPub__c</fullName>
        <label>Product - Tech Pub</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Publisher__c</fullName>
        <formula>Article__r.Document_Author_Name__r.FirstName  &amp; &apos; &apos; &amp;  Article__r.Document_Author_Name__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Publisher</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remainder_Mail_Time__c</fullName>
        <formula>NOW() - CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Remainder Mail Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Selected_Feedback_Types__c</fullName>
        <label>Selected Feedback Types</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Selected_Feedback_Value__c</fullName>
        <label>Selected Feedback Type Value</label>
        <picklist>
            <picklistValues>
                <fullName>Helpful</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exactly what I am looking for</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Needs to be reviewed or corrected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Send_Email_Notification__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Email Notification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Site_Name__c</fullName>
        <formula>Submitter__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Site Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Submitted</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wait/Cust</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wait/Expert</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wait/Release</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wait/Critical CCR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wait/CCR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wait/JIRA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sub_Category__c</fullName>
        <label>Sub-Category</label>
        <picklist>
            <controllingField>Category__c</controllingField>
            <picklistValues>
                <fullName>Broken Links</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Browser Specific</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comprehension</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Document Viewer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Formatting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incomplete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incorrect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invalid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Machine Specific</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outdated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Performance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Permission Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Permissions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Search</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Support Case</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Usability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Video Viewer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Submitter_COS_ID__c</fullName>
        <label>Submitter COS ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submitter_Email_Value__c</fullName>
        <label>Submitter Email Value</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Submitter_Email__c</fullName>
        <formula>Submitter__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submitter_External_ID__c</fullName>
        <label>Submitter External ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submitter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>COS Feedback</relationshipLabel>
        <relationshipName>Article_Feedback</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Technology_Platform__c</fullName>
        <formula>Product_Class__r.Cadence_Platform__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Technology Platform</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>To_Be_Reviewed_or_Modified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Needs to be reviewed or corrected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>User_Name__c</fullName>
        <formula>Submitter__r.FirstName+&quot; &quot;+Submitter__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Type__c</fullName>
        <label>User Type</label>
        <picklist>
            <picklistValues>
                <fullName>Internal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>External</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Was_Document_Helpful__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Helpful</label>
        <type>Checkbox</type>
    </fields>
    <label>COS Feedback</label>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>Feedback_Submission_Date__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Status__c</columns>
        <columns>Comment__c</columns>
        <columns>Document_type__c</columns>
        <columns>Feedback_ID__c</columns>
        <columns>Feedback_Type__c</columns>
        <columns>Was_Document_Helpful__c</columns>
        <columns>To_Be_Reviewed_or_Modified__c</columns>
        <columns>Page_URL__c</columns>
        <columns>Feedback_Categories__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>COS_Feedback_Queue</fullName>
        <columns>NAME</columns>
        <columns>Article__c</columns>
        <columns>Submitter__c</columns>
        <columns>Submitter_Email__c</columns>
        <columns>Account_Name__c</columns>
        <columns>Page_URL__c</columns>
        <columns>Document_type__c</columns>
        <columns>Product_Class__c</columns>
        <columns>Comment__c</columns>
        <filterScope>Everything</filterScope>
        <label>COS Feedback Queue</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Feed_Back_Queue_Article_Feedback</fullName>
        <filterScope>Queue</filterScope>
        <label>Feedback Queue</label>
        <queue>Feed_Back_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>Feedback-{00000000}</displayFormat>
        <label>Feedback Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>COS Feedback</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>COS_Feedback_Owner_Validation_Rule</fullName>
        <active>true</active>
        <description>Owner should  a User while changing the feedback status to Closed</description>
        <errorConditionFormula>AND 
( 
ISCHANGED(Status__c), 
ISPICKVAL(Status__c, &apos;Closed&apos;),
NOT(BEGINS(OwnerId, &apos;005&apos;))
)</errorConditionFormula>
        <errorDisplayField>OwnerId</errorDisplayField>
        <errorMessage>Owner should not be a Queue while changing the feedback status to Closed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>COS_Feedback_Validation_Rule</fullName>
        <active>true</active>
        <description>MakeFeedback Type check before status is changed to Closed</description>
        <errorConditionFormula>AND( 
OR(
ISCHANGED(Status__c), 
ISCHANGED(Feedback_Type__c), 
ISCHANGED(Category__c), 
ISCHANGED(Sub_Category__c)
), 
ISPICKVAL( Status__c , &apos;Closed&apos;), 
OR(
ISPICKVAL( Feedback_Type__c , &apos;&apos;) || 
ISPICKVAL( Category__c , &apos;&apos;) || 
ISPICKVAL( Sub_Category__c , &apos;&apos;)
)
)</errorConditionFormula>
        <errorMessage>Please review and select a value(s) for Closure Categories to CLOSE Feedback !</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>DocType_onclose_not_null</fullName>
        <active>true</active>
        <description>Document type of feedback should not be null on close status  of feedback</description>
        <errorConditionFormula>AND( 
OR(ISCHANGED(Status__c), ISCHANGED(Document_type__c)), 
AND( 
ISPICKVAL(Status__c, &apos;Closed&apos;), 
OR( 
ISNULL(Document_type__c ), 
ISBLANK(Document_type__c) 
) 
) 
)</errorConditionFormula>
        <errorMessage>Please enter Document Type to close Feedback.</errorMessage>
    </validationRules>
</CustomObject>